--- a/FrontendProj/package.json
+++ b/FrontendProj/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@angular/animations": "~8.2.0",
+    "@angular/cli": "^10.1.2",
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
@@ -24,6 +25,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@nativescript/schematics": "^10.1.0",
     "@nativescript/theme": "~2.3.0",
     "firebase": "^7.19.1",
     "nativescript-angular": "~8.21.0",
