--- a/FrontendProj/package.json
+++ b/FrontendProj/package.json
@@ -29,6 +29,8 @@
     "@nativescript/theme": "~2.3.0",
     "firebase": "^7.19.1",
     "nativescript-angular": "~8.21.0",
+    "nativescript-cardview": "^3.2.0",
+    "nativescript-material-cardview": "^3.3.1",
     "nativescript-plugin-firebase": "^10.5.2",
     "nativescript-ui-sidedrawer": "~8.0.0",
     "reflect-metadata": "~0.1.12",
