--- a/trainingstagebuch/pubspec.yaml
+++ b/trainingstagebuch/pubspec.yaml
@@ -52,9 +52,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+  # To add assets to your application, add an assets section, like this:
+  # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
