--- a/trainingstagebuch/pubspec.yaml
+++ b/trainingstagebuch/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
   firebase_auth: ^0.16.1
   cloud_firestore: ^0.13.7
   provider: ^4.1.3
@@ -37,6 +37,7 @@ dependencies:
   percent_indicator: ^2.1.6
   barcode_scan: ^3.0.1
   badges: ^1.1.1
+  flutter_spinbox: ^0.2.1
 
 dev_dependencies:
   flutter_test:
